--- a/index.html
+++ b/index.html
@@ -5,11 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="" href="images/Project Cover4.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <title>Food Network</title>
 </head>
 
 <body>
+    <section>
+        <div>
+            <h1>Skip The Diet, </h1>
+            <h1>Just Eat Healthy</h1>
+            <h1>With Food Network</h1>
+
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you.</p>
+        </div>
+        <div>
+            <img src="images/Group 8425.png" alt="">
+        </div>
+    </section>
 
 </body>
 
