--- a/index.html
+++ b/index.html
@@ -7,20 +7,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Poppins:wght@500&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Food Network</title>
 </head>
 
 <body>
     <section>
-        <div>
-            <h1>Skip The Diet, </h1>
-            <h1>Just Eat Healthy</h1>
-            <h1>With Food Network</h1>
+        <div class="half-width">
+            <h1> <span class="orange">Skip </span> The Diet,<br>Just Eat Healthy <br>With Food Network </h1>
 
-            <p>Imagine you don't need a diet because we provide healthy and delicious food for you.</p>
+
+            <p id="margin">Imagine you don't need a diet because we provide healthy and delicious food for
+                you.</p>
+            <h3></h3>
+            <a class="link-button" target="blank" href="https://www.wikipedia.org/">Order Food</a>
         </div>
-        <div>
+        <div class="half-width">
             <img src="images/Group 8425.png" alt="">
         </div>
     </section>
