--- a/index.html
+++ b/index.html
@@ -30,6 +30,75 @@
             <img src="images/Group 8425.png" alt="">
         </div>
     </section>
+    <section id="background">
+        <div class="half-making">
+            <img id="img" src="images/Person Image.png" alt="an woman photo">
+
+        </div>
+        <div class="half-making">
+            <h2 id="marginbottom">About Me</h2>
+            <p id="margintop">Food is really and truly the most effective medicine.I strongly believe, food is a diving
+                gift from God
+                almighty and that should not be kept aside for only the rich people.Poor people deserve as much food as
+                the rich one's.</p>
+            <a class="link-button" target="blank" href="https://www.linkedin.com/">Contact Me</a>
+        </div>
+    </section>
+    <h2 class="align">My Recipies</h2>
+    <p class="align">Here are some of our best recipes which we provide for everyone. <br> They are both hygienic and
+        tasty.You can use the recipies and test <br> out the best foods once in a while.Feel free to rate our recipies.
+    </p>
+    <section class="recipie-section">
+
+        <div class="items">
+            <div class="just-item">
+                <img src="images/soup.png" alt="">
+                <h1>Meat Soup</h1>
+                <p>Food is good; we can all agree on that. But what’s better than just uploading sensual photos of
+                    delectable food is inscribing fitting captions on them? This, my friend, is the purpose of this
+                    listing.
+                </p>
+            </div>
+        </div>
+        <div class="items">
+            <div class="just-item">
+                <img src="images/Project Cover1.jpg" alt="">
+                <h1>Vegetables & Meat</h1>
+                <p>Food is good; we can all agree on that. But what’s better than just uploading sensual photos of
+                    delectable food is inscribing fitting captions on them? This, my friend, is the purpose of this
+                    listing.
+                </p>
+            </div>
+        </div>
+        <div class="items">
+            <div class="just-item">
+                <img src="images/Project Cover7.png" alt="">
+                <h1>NOddles</h1>
+                <p>Food is good; we can all agree on that. But what’s better than just uploading sensual photos of
+                    delectable food is inscribing fitting captions on them? This, my friend, is the purpose of this
+                    listing.
+                </p>
+            </div>
+        </div>
+
+    </section>
+
+    <a class="link-button guides" target="blank" href="https://www.wikipedia.org/">Show all Cooking Guides</a>
+
+    <h1 id="contact">You Wanna Contact me!</h1>
+    <a id="email" href="https://www.gmail.com/">Emalil Me Here</a>
+
+    <footer>
+        <div class="footer-talk">
+            <p>FOOD <span class="orange">NETWORK</span></p>
+            <small>Eat healthy to live healthy.Live healthy to live happy.</small>
+        </div>
+
+    </footer>
+
+
+
+
 
 </body>
 
